# curso_flask

./: database.db  pyproject.toml
curso_flask/blueprints/: database.db  main.py
curso_flask/blueprints/alembic/: env.py
curso_flask/blueprints/alembic/versions/: bbccde931cb7_table_many_to_many.py
curso_flask/blueprints/app/: __init__.py  forms.py  models.py  routers.py
curso_flask/blueprints/app/auth/: __init__.py  views.py
curso_flask/blueprints/app/book/: __init__.py  views.py
curso_flask/blueprints/app/templates/: login.html  nav.html  register.html  user.html  users.html
curso_flask/blueprints/app/users/: __init__.py  views.py
curso_flask/email/: app.py
curso_flask/email/templates/: email.html
curso_flask/forms/: main.py
curso_flask/forms/alembic/: env.py
curso_flask/forms/app/: __init__.py  forms.py  models.py  routers.py
curso_flask/forms/app/templates/: base.html  login.html  nav.html  register.html  user.html
curso_flask/introducao/: app.py
curso_flask/introducao/templates/: template.html
curso_flask/refatoracao/: main.py
curso_flask/refatoracao/app/: __init__.py  models.py  routers.py
curso_flask/refatoracao/app/templates/: login.html  (+3 more)
curso_flask/sqlalchemy/: app.py
curso_flask/sqlalchemy/instance/: database.db
curso_flask/sqlalchemy/templates/: base.html  login.html  register.html  user.html  users.html
curso_flask/template/: app.py  filters.py
curso_flask/template/pasta_templates/: base.html  index.html  users.html
curso_flask/templates/: template.html
instance/: database.db
tests/: conftest.py  test_app.py
(+4 files in other folders)
