[tool.poetry]
name = "curso-flask"
version = "0.1.0"
description = ""
authors = ["Romario lima <romariolima1006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-bootstrap = "^3.3.7.1"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
bootstrap-flask = "^2.4.1"
flask-wtf = "^1.2.2"
email-validator = "^2.2.0"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
